--- a/app/Resources/views/boot_webpack.html.twig
+++ b/app/Resources/views/boot_webpack.html.twig
@@ -37,6 +37,7 @@
   app.cloudOldUploaderSdkUrl = '{{ cloud_sdk_url("old_uploader") }}';
   app.cloudOldDocumentSdkUrl = '{{ cloud_sdk_url("old_document") }}';
   app.lang = '{{ app.request.locale }}';
+  app.mainColor = '{{ current_theme().confirmConfig.maincolor|default('default') }}';
 </script>
 
 <script src="{{ asset('bundles/bazingajstranslation/js/translator.min.js') }}"></script>
