--- a/app/Resources/views/my/learning/classroom/classroom.html.twig
+++ b/app/Resources/views/my/learning/classroom/classroom.html.twig
@@ -7,9 +7,9 @@
 {% set side_nav = 'my-classroom' %}
 
 {% block main %}
+  <link href="{{ asset('static-dist/app/css/main-ant.css') }}" rel="stylesheet"/>
 <style>
 .classroom-footer{
-
   margin-top: 50px;
 }
 </style>
