--- a/app/Resources/views/my/learning/thread/discussions.html.twig
+++ b/app/Resources/views/my/learning/thread/discussions.html.twig
@@ -5,6 +5,7 @@
 {% set side_nav = 'my-discussions' %}
 
 {% block main %}
+  <link href="{{ asset('static-dist/app/css/main-ant.css') }}" rel="stylesheet"/>
 
 <div class="panel panel-default panel-col">
   <div class="panel-heading">{{'my.learning.thread'|trans}}</div>
