--- a/app/Resources/views/my/testpaper/my-testpaper-list.html.twig
+++ b/app/Resources/views/my/testpaper/my-testpaper-list.html.twig
@@ -4,6 +4,7 @@
 {% set side_nav = 'my-testpaper' %}
 
 {% block main %}
+  <link href="{{ asset('static-dist/app/css/main-ant.css') }}" rel="stylesheet"/>
   <div class="panel panel-default panel-col">
     <div class="panel-heading">{{'my.learning.testpaper'|trans}}</span></div>
     <div class="panel-body">
