--- a/app/Resources/views/script_boot.html.twig
+++ b/app/Resources/views/script_boot.html.twig
@@ -50,6 +50,7 @@
   app.cloudOldUploaderSdkUrl = '{{ cloud_sdk_url("old_uploader") }}';
   app.cloudOldDocumentSdkUrl = '{{ cloud_sdk_url("old_document") }}';
   app.lang = '{{ app.request.locale }}';
+  app.mainColor = '{{ current_theme().confirmConfig.maincolor|default('default') }}';
 </script>
 
 {% include 'script/translation.html.twig' %}
