--- a/app/Resources/views/my/contract/contract.html.twig
+++ b/app/Resources/views/my/contract/contract.html.twig
@@ -7,5 +7,6 @@
 {% set side_nav = 'my-contract' %}
 
 {% block main %}
+  <link href="{{ asset('static-dist/app/css/main-ant.css') }}" rel="stylesheet"/>
   <div id="my-contract"></div>
 {% endblock %}
