--- a/app/Resources/views/my/homework/my-homework-list.html.twig
+++ b/app/Resources/views/my/homework/my-homework-list.html.twig
@@ -5,6 +5,7 @@
 {% set side_nav = 'my-homework' %}
 
 {% block main %}
+  <link href="{{ asset('static-dist/app/css/main-ant.css') }}" rel="stylesheet"/>
   <div class="panel panel-default panel-col">
     <div class="panel-heading">{{'my.learning.homework'|trans}}</span></div>
     <div class="panel-body">
