--- a/app/Resources/views/my/learning/notebook/index.html.twig
+++ b/app/Resources/views/my/learning/notebook/index.html.twig
@@ -7,6 +7,7 @@
 {% do script(['app/js/my/learn/notebook/index.js']) %}
 
 {% block main %}
+  <link href="{{ asset('static-dist/app/css/main-ant.css') }}" rel="stylesheet"/>
 
   <div class="panel panel-default panel-col">
     <div class="panel-heading">{{ 'my.learning.note'|trans }}</div>
