--- a/app/Resources/views/my/learning/question-bank/list.html.twig
+++ b/app/Resources/views/my/learning/question-bank/list.html.twig
@@ -6,6 +6,7 @@
 {% block title %}{{'my.learning.question_bank_menu'|trans}} - {{ parent() }}{% endblock %}
 
 {% block main %}
+  <link href="{{ asset('static-dist/app/css/main-ant.css') }}" rel="stylesheet"/>
   <div class="panel panel-default panel-col">
     <div class="panel-heading">
       {{ 'my.learning.question_bank_menu'|trans }}
