--- a/app/Resources/views/my/learning/thread/questions.html.twig
+++ b/app/Resources/views/my/learning/thread/questions.html.twig
@@ -5,7 +5,7 @@
 {% set side_nav = 'my-questions' %}
 
 {% block main %}
-
+  <link href="{{ asset('static-dist/app/css/main-ant.css') }}" rel="stylesheet"/>
 
 <div class="panel panel-default panel-col">
   <div class="panel-heading">{{'my.learning.question'|trans}}
