--- a/app/Resources/views/order/detail-modal.html.twig
+++ b/app/Resources/views/order/detail-modal.html.twig
@@ -1,5 +1,5 @@
 {% extends 'bootstrap-modal-layout.html.twig' %}
-{% import "admin/macro.html.twig" as admin_macro %}
+{% import 'admin-v2/macro.html.twig' as admin_macro %}
 {% set modalSize = 'large' %}
 {% set modalType = 'course' %}
 
