feat: #240926 修改图片引用

--- a/app/Resources/static-src/app/less/item-bank/components/item-import/index.less
+++ b/app/Resources/static-src/app/less/item-bank/components/item-import/index.less
@@ -353,7 +353,7 @@
   }
 
   .error-link {
-    color: @error-color;
-    border-bottom: solid 1px @error-color;
+    color: #f5222d;
+    border-bottom: solid 1px #f5222d;
   }
 }
