--- a/app/Resources/views/question-manage/preview-modal.html.twig
+++ b/app/Resources/views/question-manage/preview-modal.html.twig
@@ -9,9 +9,11 @@
 {% set modal_class = 'modal-lg' %}
 
 {% if maincolor != 'default' and setting('theme.code', 'jianmo') == 'jianmo' %}
-  {% do css(['libs/item-bank/lib/styles/item-bank-' ~ maincolor ~ '.css']) %}
+  {% do css(['app/css/item-bank-' ~ maincolor ~ '.css']) %}
+  {% do css(['app/css/item-bank-antdv-' ~ maincolor ~ '.css']) %}
 {% else %}
-  {% do css(['libs/item-bank/lib/styles/item-bank.css']) %}
+  {% do css(['app/css/item-bank.css']) %}
+  {% do css(['app/css/item-bank-antdv.css']) %}
 {% endif %}
 
 {% block body %}
