--- a/app/Resources/views/question-manage/update-duplicative-question.html.twig
+++ b/app/Resources/views/question-manage/update-duplicative-question.html.twig
@@ -5,9 +5,11 @@
 {% set themeConfig = app.request.get('themeEditing')|default(false) ? currentTheme.config  : currentTheme.confirmConfig %}
 {% set maincolor = themeConfig.maincolor|default('default') %}
 {% if maincolor != 'default' and setting('theme.code', 'jianmo') == 'jianmo' %}
-  {% do css(['libs/item-bank/lib/styles/item-bank-' ~ maincolor ~ '.css']) %}
+  {% do css(['app/css/item-bank-' ~ maincolor ~ '.css']) %}
+  {% do css(['app/css/item-bank-antdv-' ~ maincolor ~ '.css']) %}
 {% else %}
-  {% do css(['libs/item-bank/lib/styles/item-bank.css']) %}
+  {% do css(['app/css/item-bank.css']) %}
+  {% do css(['app/css/item-bank-antdv.css']) %}
 {% endif %}
 
 {% block body %}
