fix: #107472 修复分数展示丢精度

--- a/app/Resources/static-src/app/less/item-bank/index.less
+++ b/app/Resources/static-src/app/less/item-bank/index.less
@@ -1,4 +1,4 @@
-//@import "~ant-design-vue/dist/antd.css";
+//@import "~ant-design-vue/dist/antd.less";
 @import "./common/common.less";
 @import "./common/variable.less";
 @import "./components/index.less";
