feat: #240930 删除无用样式

--- a/app/Resources/static-src/app/less/item-bank/components/inspection-control/index.less
+++ b/app/Resources/static-src/app/less/item-bank/components/inspection-control/index.less
@@ -24,8 +24,8 @@
             top: -9999px;
             &.actived {
                 position: relative;
-                left: 0px;
-                top: 0px;
+                left: 0;
+                top: 0;
             }
         }
         .ibs-capture-area {
@@ -203,19 +203,9 @@
         display: none;
     }
 }
-// .ibs-inspection-ready {
-//     &.not-captured {
-//         .ant-modal-footer {
-//             .ant-btn:nth-child(1) {
-//                 display: none;
-//             }
-//         }
-//     }
-// }
-
 
 .ibs-inspection-card {
-    padding: 8px 0px 0;
+    padding: 8px 0 0;
     &-tips {
         display: inline-block;
         width:146px;
@@ -259,38 +249,3 @@
         }
     }
 }
-
-// .ibs-card-inspection-show {
-//     & + .ibs-inspection {
-//         .ibs-card--inspection {
-//             position: fixed;
-//             top: 400px;
-//         }
-//     }
-// }
-
-// .ibs-card--inspection {
-//     position: fixed;
-//     top: 156px;
-// }
-
-// 适配倒计时
-// .ibs-assessment-timer--top {
-//     & + .ibs-card {
-//         & + .ibs-inspection {
-//             .ibs-card--inspection {
-//                 position: fixed;
-//                 top: 178px;
-//             }
-//         }
-//     }
-//     & + .ibs-card-inspection-show {
-//         & + .ibs-inspection {
-//             .ibs-card--inspection {
-//                 position: fixed;
-//                 top: 448px;
-//             }
-//         }
-//     }
-
-// }
