--- a/app/Resources/views/article/part/detail-body.html.twig
+++ b/app/Resources/views/article/part/detail-body.html.twig
@@ -1,3 +1,3 @@
-<div class="article-text cke_editable cke_contents_ltr">
+<div class="article-text cke_editable cke_contents_ltr js-article-text">
   {{ article.body|cdn|raw }}
 </div>
