--- a/app/Resources/views/file-chooser/widget/choose-table.html.twig
+++ b/app/Resources/views/file-chooser/widget/choose-table.html.twig
@@ -11,6 +11,7 @@
             <tr id="material-table-tr-{{ file.id }}" class="file-browser-item"
                 data-id="{{ file.id }}"
                 data-name="{{ file.filename }}"
+                data-ext="{{ file.ext }}"
                 data-status="{{ file.convertStatus }}"
                 data-source="self"
                 data-length="{{ file.length }}"
@@ -34,6 +35,7 @@
             <tr id="material-table-tr-{{ file.id }}" class="file-browser-item"
                 data-id="{{ file.id }}"
                 data-name="{{ file.filename }}"
+                data-ext="{{ file.ext }}"
                 data-status="{{ file.convertStatus }}"
                 data-source="self"
                 data-length="{{ file.length }}"
