feat: #20241014 添加主题色；去除样式覆盖；消除类型警告

--- a/app/Resources/views/my/learning/classroom/classroom.html.twig
+++ b/app/Resources/views/my/learning/classroom/classroom.html.twig
@@ -7,6 +7,7 @@
 {% set side_nav = 'my-classroom' %}
 
 {% block main %}
+  <link href="{{ asset('static-dist/app/css/main-ant.css') }}" rel="stylesheet"/>
 <style>
 .classroom-footer{
 
@@ -59,7 +60,7 @@
                 <div class="cd-progress cd-progress-sm">
                   <div class="progress-bar">
                     <div class="progress-outer">
-                      <div class="progress-inner" style="width: {{ classroom.learningProgressPercent }}%;"></div> 
+                      <div class="progress-inner" style="width: {{ classroom.learningProgressPercent }}%;"></div>
                     </div>
                   </div>
                   <div class="progress-text">{{ classroom.learningProgressPercent }}%</div>
