--- a/app/Resources/views/my/learning/thread/questions.html.twig
+++ b/app/Resources/views/my/learning/thread/questions.html.twig
@@ -6,6 +6,7 @@
 
 {% block main %}
 
+  <link href="{{ asset('static-dist/app/css/main-ant.css') }}" rel="stylesheet"/>
 
 <div class="panel panel-default panel-col">
   <div class="panel-heading">{{'my.learning.question'|trans}}
