--- a/app/Resources/views/courseset-manage/sidebar.html.twig
+++ b/app/Resources/views/courseset-manage/sidebar.html.twig
@@ -48,13 +48,13 @@
               </a>
             {% endif %}
           </li>
-          <li class="cd-sidebar__item {% if course_side_nav == 'question' %}active{% endif %}">
+          <li class="cd-sidebar__item {% if course_side_nav == 'item-bank' %}active{% endif %}">
             {% if courseSet.locked %}
-              <a class="pl10" href="{{ path('course_set_manage_sync', {id: courseSet.id, sideNav: 'question'}) }}">
+              <a class="pl10" href="{{ path('course_set_manage_sync', {id: courseSet.id, sideNav: 'item-bank'}) }}">
                 <span class="es-icon es-icon-lock mr10" aria-hidden="true"></span>题库练习管理
               </a>
             {% else %}
-              <a href="{{ path('course_set_manage_course_question', {courseSetId: courseSet.id, courseId: curCourse.id}) }}">
+              <a href="{{ path('course_set_manage_course_item_bank', {courseSetId: courseSet.id, courseId: curCourse.id}) }}">
                 题库练习管理
                 {% if hasLessonChanged|default(0) %}
                   <i class="es-icon es-icon-tip color-danger"></i>
