feat: #20241014 修改样式丢失

--- a/app/Resources/views/question-bank/testpaper/index.html.twig
+++ b/app/Resources/views/question-bank/testpaper/index.html.twig
@@ -2,6 +2,8 @@
 
 {% block title %}{{ 'my.teaching.question_bank.testpaper.manage'|trans }} - {{ parent() }}{% endblock %}
 
+{% do css(['app/css/main-ant.css']) %}
+
 {% block meta %}
   {{ parent() }}
   <meta name="lavalamp-enable" content="0"/>
