--- a/app/Resources/views/homework/manage/result-analysis.html.twig
+++ b/app/Resources/views/homework/manage/result-analysis.html.twig
@@ -5,13 +5,7 @@
 
 {% block stylesheets %}
   {{ parent() }}
-  {% if maincolor != 'default' and setting('theme.code', 'jianmo') == 'jianmo' %}
-    <link href="{{ asset('static-dist/app/css/item-bank-' ~ maincolor ~ '.css') }}" rel="stylesheet" />
-    <link href="{{ asset('static-dist/app/css/item-bank-antdv-' ~ maincolor ~ '.css') }}" rel="stylesheet" />
-  {% else %}
-    <link href="{{ asset('static-dist/app/css/item-bank.css') }}" rel="stylesheet" />
-    <link href="{{ asset('static-dist/app/css/item-bank-antdv.css') }}" rel="stylesheet" />
-  {% endif %}
+  {% include 'item-bank-css-loader.html.twig' %}
 {% endblock %}
 
 {% block body %}
