--- a/app/Resources/views/admin-v2/education/setting/index.html.twig
+++ b/app/Resources/views/admin-v2/education/setting/index.html.twig
@@ -1,13 +1,9 @@
 {% extends 'admin-v2/content-layout.html.twig' %}
 
 {% do script(['app/vue/views/teach/params_setting/index.js'])%}
+{% do css(['app/css/admin-ant.css']) %}
 
 {% set menu = 'admin_v2_multi_class_setting_manage' %}
-
-{% block stylesheets %}
-  {{ parent() }}
-  <link href="{{ asset('static-dist/app/css/admin-ant.css') }}" rel="stylesheet"/>
-{% endblock %}
 
 {% block main %}
   <div id="app"></div>
