--- a/app/Resources/views/admin-v2/operating/mobile-setting/app-decorate.html.twig
+++ b/app/Resources/views/admin-v2/operating/mobile-setting/app-decorate.html.twig
@@ -3,10 +3,10 @@
 {% set menu = 'admin_v2_mobile_discoveries_settings' %}
 
 {% do script(['app/vue/views/operation/app_setting/decorate/index.js']) %}
+{% do css(['app/css/admin-ant.css']) %}
 
 {% block stylesheets %}
   {{ parent() }}
-  <link href="{{ asset('static-dist/app/css/admin-ant.css') }}" rel="stylesheet"/>
   <style>
     html {
       min-width: 1200px;
