--- a/app/Resources/views/admin-v2/operating/mobile-setting/mobile.setting.discoveries.html.twig
+++ b/app/Resources/views/admin-v2/operating/mobile-setting/mobile.setting.discoveries.html.twig
@@ -3,11 +3,7 @@
 {% set menu = 'admin_v2_mobile_discoveries_settings' %}
 
 {% do script(['app/vue/views/operation/app_setting/index.js']) %}
-
-{% block stylesheets %}
-  {{ parent() }}
-  <link href="{{ asset('static-dist/app/css/admin-ant.css') }}" rel="stylesheet"/>
-{% endblock %}
+{% do css(['app/css/admin-ant.css']) %}
 
 {% block main %}
   <div id="app"></div>
