--- a/app/Resources/views/admin-v2/system/course-setting/course-purchase-agreement.html.twig
+++ b/app/Resources/views/admin-v2/system/course-setting/course-purchase-agreement.html.twig
@@ -3,11 +3,7 @@
 {% set menu = 'admin_v2_course_purchase_agreement_eduit' %}
 
 {% do script(['app/vue/views/system/purchase_agreement/index.js']) %}
-
-{% block stylesheets %}
-  {{ parent() }}
-  <link href="{{ asset('static-dist/app/css/admin-ant.css') }}" rel="stylesheet"/>
-{% endblock %}
+{% do css(['app/css/admin-ant.css']) %}
 
 {% block content %}
   {% include 'admin-v2/widget/side-bar.html.twig' %}
