--- a/app/Resources/views/admin-v2/teach/cloud-resources/live-playback.html.twig
+++ b/app/Resources/views/admin-v2/teach/cloud-resources/live-playback.html.twig
@@ -3,11 +3,7 @@
 {% set menu = 'admin_v2_live_playback' %}
 
 {% do script(['app/vue/views/teach/cloud_resources/live_playback/index.js']) %}
-
-{% block stylesheets %}
-  {{ parent() }}
-  <link href="{{ asset('static-dist/app/css/admin-ant.css') }}" rel="stylesheet"/>
-{% endblock %}
+{% do css(['app/css/admin-ant.css']) %}
 
 {% block main %}
   <div id="app">
