--- a/app/Resources/views/admin-v2/teach/multi_class_product/index.html.twig
+++ b/app/Resources/views/admin-v2/teach/multi_class_product/index.html.twig
@@ -3,11 +3,7 @@
 {% set menu = 'admin_v2_multi_class_product_manage' %}
 
 {% do script(['app/vue/views/teach/multi_class_product/index.js']) %}
-
-{% block stylesheets %}
-  {{ parent() }}
-  <link href="{{ asset('static-dist/app/css/admin-ant.css') }}" rel="stylesheet"/>
-{% endblock %}
+{% do css(['app/css/admin-ant.css']) %}
 
 {% block main %}
   <div id="app"></div>
