--- a/app/Resources/views/admin-v2/user/scrm/index.html.twig
+++ b/app/Resources/views/admin-v2/user/scrm/index.html.twig
@@ -3,11 +3,7 @@
 {% set menu = 'admin_v2_scrm_manage' %}
 
 {% do script(['app/vue/views/user/scrm/index.js']) %}
-
-{% block stylesheets %}
-  {{ parent() }}
-  <link href="{{ asset('static-dist/app/css/admin-ant.css') }}" rel="stylesheet"/>
-{% endblock %}
+{% do css(['app/css/admin-ant.css']) %}
 
 {% block content %}
   {% include 'admin-v2/widget/side-bar.html.twig' %}
