--- a/app/Resources/views/item-bank-exercise/answer/report.html.twig
+++ b/app/Resources/views/item-bank-exercise/answer/report.html.twig
@@ -2,13 +2,7 @@
 
 {% block stylesheets %}
   {{ parent() }}
-  {% if maincolor != 'default' and setting('theme.code', 'jianmo') == 'jianmo' %}
-    <link href="{{ asset('static-dist/app/css/item-bank-' ~ maincolor ~ '.css') }}" rel="stylesheet" />
-    <link href="{{ asset('static-dist/app/css/item-bank-antdv-' ~ maincolor ~ '.css') }}" rel="stylesheet" />
-  {% else %}
-    <link href="{{ asset('static-dist/app/css/item-bank.css') }}" rel="stylesheet" />
-    <link href="{{ asset('static-dist/app/css/item-bank-antdv.css') }}" rel="stylesheet" />
-  {% endif %}
+  {% include 'item-bank-css-loader.html.twig' %}
 {% endblock %}
 
 {% block body %}
@@ -16,7 +10,7 @@
     {% if showHeader|default(1) %}{{ parent() }}{% endif %}
   {% endblock %}
 
-  {{ render(controller('AppBundle:AnswerEngine/AnswerEngine:report', {answerRecordId: answerRecordId, restartUrl: restartUrl, collect: false, options: {returnUrl: returnUrl, assessmentStatus: assessmentStatus}})) }}
+  {{ render(controller('AppBundle:AnswerEngine/AnswerEngine:report', {answerRecordId: answerRecordId, restartUrl: restartUrl, collect: false, options: {returnUrl: returnUrl|default(), assessmentStatus: assessmentStatus|default()}})) }}
 
   {% block footer %}
     {% if showHeader|default(1) %}{{ parent() }}{% endif %}
