--- a/app/Resources/views/question-bank/question/index.html.twig
+++ b/app/Resources/views/question-bank/question/index.html.twig
@@ -1,5 +1,6 @@
 {% extends 'question-bank/question/layout.html.twig' %}
 {% do script(['libs/select2.js', 'libs/jquery-intro.js' , 'app/js/question-bank/question/index.js' , 'app/js/question-bank/list-header/index.js'])  %}
+{% do css(['app/css/main-ant.css']) %}
 
 {% block container %}
   <div class="panel panel-default panel-col">
