feat: #20241018 修复样式异常

--- a/app/Resources/views/course-manage/item-bank.html.twig
+++ b/app/Resources/views/course-manage/item-bank.html.twig
@@ -8,6 +8,6 @@
   <div id="item-bank"
        data-course="{{ course|json_encode }}"
        data-course-set="{{ courseSet|default([])|json_encode }}"
-       style="margin-left: 200px"
+       style="margin-left: 200px; min-height: 800px"
   ></div>
 {% endblock %}
