feat: #107979 显示学习前课程绑定的题库

--- a/app/Resources/views/classroom-manage/item-bank.html.twig
+++ b/app/Resources/views/classroom-manage/item-bank.html.twig
@@ -6,7 +6,7 @@
 
 {% block main %}
   <div id="item-bank"
-       data-classroom="{{ classroom|default([])|json_encode }}"
+       data-classroom-id="{{ classroom.id }}"
        style="min-height: 800px"
   ></div>
 {% endblock %}
