feat: #108011 完成班级学习后显示绑定的题库

--- a/app/Resources/views/classroom-itemBankBind/list.html.twig
+++ b/app/Resources/views/classroom-itemBankBind/list.html.twig
@@ -1,5 +1,10 @@
 {% extends 'classroom/content-layout.html.twig' %}
 {% set nav = 'itemBankBind' %}
+
+{% do script(['vue3/js/classroom/item-bank/index.js']) %}
+
 {% block main %}
-{{ dump(classroom) }}
+  <div id="item-bank"
+       data-classroom-id="{{ classroom.id }}"
+  ></div>
 {% endblock %}
