--- a/app/Resources/views/admin-v2/system/contract/index.html.twig
+++ b/app/Resources/views/admin-v2/system/contract/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'admin-v2/content-layout.html.twig' %}
 
-{% do script(['vue3/js/contract/index.js']) %}
+{% do script(['vue3/js/admin-v2/system/contract/index.js']) %}
 
 {% set menu = 'admin_v2_contract_manage' %}
 
